--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "classnames": "^2.5.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "xlsx": "^0.18.5"
