--- a/server/.env
+++ b/server/.env
@@ -2,13 +2,15 @@
 MONGO_URI=mongodb+srv://financialadvice86:nfnfphcfngPjSUuw@timetologin.5ebkh39.mongodb.net/timewatch?retryWrites=true&w=majority&appName=Timetologin
 JWT_SECRET=supersecret123
 CLIENT_ORIGIN=https://ravanahelmet.fun,https://www.ravanahelmet.fun
+MONGO_DB=timewatch
 
 # --- מומלץ/לא מזיק ---
 PORT=4000
 NODE_VERSION=20
 
 # --- לאכיפת נוכחות במשרד (אם רוצים גדר גיאוגרפית) ---
-OFFICE_NAME=Costoro HQ
+ATTENDANCE_REQUIRE_OFFICE=1
+OFFICE_NAME=Head Office
 TIMEZONE = Asia/Jerusalem
 OFFICE_LAT=32.06353
 OFFICE_LNG=34.78180
