fix: auth redirect, navbar logout, geolocation improvements, env office location

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 # --- חובה ---
 MONGO_URI=mongodb+srv://financialadvice86:nfnfphcfngPjSUuw@timetologin.5ebkh39.mongodb.net/timewatch?retryWrites=true&w=majority&appName=Timetologin
 JWT_SECRET=supersecret123
-CLIENT_ORIGIN=https://ravanahelmet.fun,https://www.ravanahelmet.fun
+CLIENT_ORIGIN=https://api.ravanahelmet.fun,https://ravanahelmet.fun,https://www.ravanahelmet.fun
 MONGO_DB=timewatch
 
 # --- מומלץ/לא מזיק ---
@@ -11,7 +11,7 @@ NODE_VERSION=20
 # --- לאכיפת נוכחות במשרד (אם רוצים גדר גיאוגרפית) ---
 ATTENDANCE_REQUIRE_OFFICE=1
 OFFICE_NAME=Head Office
-TIMEZONE = Asia/Jerusalem
+TIMEZONE=Asia/Jerusalem
 OFFICE_LAT=32.06353
 OFFICE_LNG=34.78180
-OFFICE_RADIUS_M=200
+OFFICE_RADIUS_M=300
