chore(scripts): add fix:user to update name and admin permissions

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "invite:admin": "node ../scripts/create_admin_invite.js",
-    "fix:admin": "node ../scripts/fix_admin_perms.js"
+    "fix:admin": "node ../scripts/fix_admin_perms.js",
+    "fix:user": "node ../scripts/fix_user_profile.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
