--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "invite:admin": "node ../scripts/create_admin_invite.js",
-    "fix:admin": "node ../scripts/fix_admin_perms.js",
-    "fix:user": "node ../scripts/fix_user_profile.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
