--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
-    "tailwindcss": "^3.4.1"
+    "rollup": "^4.52.3",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.2.0"
   }
 }
