--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "rollup": "^4.52.3",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.2.0"
+    "vite": "^5.0.0"
   }
 }
